cabal-version:   3.0
name:            simon-repo
version:         0.1.0.0
license:         NONE
author:          Matthew Pickering
maintainer:      matthewtpickering@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base >=4.18.1.0, hashtables, primitive
    hs-source-dirs:   src
    default-language: Haskell2010
